// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers (Queries) fetchContributors returns contributors from a repo 1`] = `
Object {
  "contributors": Object {
    "data": Array [
      Object {
        "avatar_url": "http://avatar_url/",
        "html_url": "http://html_url/",
        "login": "user1",
      },
    ],
    "nextPage": 2,
  },
}
`;

exports[`Helpers (Queries) fetchCounts returns counts from an organization 1`] = `
Object {
  "counts": Array [
    Object {
      "count": 2,
      "name": "repo1",
    },
  ],
}
`;

exports[`Helpers (Queries) fetchRepo returns data from a repo 1`] = `
Object {
  "repo": Object {
    "contributors": Object {
      "data": Array [
        Object {
          "avatar_url": "http://avatar_url/",
          "html_url": "http://html_url/",
          "login": "user1",
        },
      ],
      "nextPage": 2,
    },
    "description": "",
    "forks_count": 1,
    "html_url": "",
    "license": Object {
      "name": "",
    },
    "name": "repo1",
    "open_issues_count": 1,
    "stargazers_count": 1,
    "subscribers_count": 1,
  },
}
`;
